# chix

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  subnet_design.md  validator.py
docs/: index.html
knowledge/: INDEX.yaml  bootstrap.md  coding.md  guidelines.coding-and-qa.md  index.yaml  tasks.project-bootstrap.md
knowledge/bittensor/: INDEX.yaml  design_flow.yaml  incentive.primitives.yaml  miner.contract.yaml  miner.rules.yaml  subnet.invariants.yaml  validator.contract.yaml  validator.rules.yaml
knowledge/localnet/: INDEX.md  localnet.miner-fixtures.md  localnet.setup.md  stub_miners.md
knowledge/nexus/: INDEX.yaml  nexus.boundaries.yaml  nexus.capabilities.yaml  nexus.model.yaml
knowledge/pylon/: INDEX.yaml  pylon.capabilities.yaml  pylon.topology.yaml
localnet/: .env.example  README.md  bootstrap.py  compose.yml  docker-compose.yml
localnet/miners/: miner-honest.py  miner.template.py
tests/: test_scoring.py
